# dirstudio

./: .gitignore  README.md  launch.bat  launch.sh
dirstudio/client/: index.html  package.json
dirstudio/client/components/: footer.html  header.html  page-organize.html  page-overview.html  page-transform.html  page-tree.html  sidebar.html
dirstudio/client/css/: base.css  components.css  layout.css  pages.css  styles.css
dirstudio/client/js/: api.js  app.js  components.js  utils.js
dirstudio/client/js/modules/: loader.js  scanner.js  store.js  utils.js
dirstudio/client/js/pages/: organize.js  overview.js  transform.js  tree.js
dirstudio/server/: dirstudio.db  duplicates.json  organization_report.json  pyproject.toml  scan_tree.json
dirstudio/server/src/: config.py  dirstudio.db  main.py
dirstudio/server/src/api/: api.py  endpoints.py  models.py
dirstudio/server/src/core/: filesystem.py  metadata.py  processor.py  worker.py
dirstudio/server/src/db/: crud.py  database.py  schema.py
dirstudio/server/src/services/: duplicate.py  duplication.py  hash.py  hashing.py  organize.py  scan.py  scanning.py  snapshot.py  transform.py  transformation.py
dirstudio/server/test/: test_pipeline.py
docs/: api.md  architecture.md  development.md  features.md  installation.md
